[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme-default.tres" type="Theme" id=1]
[ext_resource path="res://components/tutorial_overlay.gd" type="Script" id=2]
[ext_resource path="res://shaders/spotlight.material" type="Material" id=3]
[ext_resource path="res://art-built/9patch/panel-9patch.png" type="Texture2D" id=4]

[node name="tutorial" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Mouse", "Theme" ]

[node name="mouse_blocker" type="ColorRect" parent="." index="0"]

material = ExtResource( 3 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.501961 )
_sections_unfolded = [ "Material", "Mouse" ]

[node name="nine_patch_rect" type="NinePatchRect" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -124.0
offset_right = 218.0
offset_bottom = 106.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11
_sections_unfolded = [ "Mouse", "Patch Margin" ]

[node name="margin_container" type="MarginContainer" parent="nine_patch_rect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme_override_constants/margin_right = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_left = 15
theme_override_constants/margin_bottom = 15
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "custom_constants" ]

[node name="rich_text_label" type="RichTextLabel" parent="nine_patch_rect/margin_container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 15.0
offset_top = 15.0
offset_right = 406.0
offset_bottom = 215.0
pivot_offset = Vector2( 0, 0 )
clip_contents = true
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
text = "[b]Hello![/b]

This is a tutorial."
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Hello!

This is a tutorial."
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "BBCode", "Margin" ]

[node name="tree_poll_timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = true


